stop footer from having horizontal scroll and adjust min-height on main

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -58,7 +58,7 @@ a.button:hover, a.button:focus {
 section.main {
   padding-top: 40px;/* for nav */
   margin: 40px;
-  min-height: calc(100vh - (140px + 100px));
+  min-height: calc(100vh - (100px + 140px + 100px));
 }
 
 .main > h1 {
@@ -89,9 +89,11 @@ footer {
   justify-content: space-around;
   padding: 40px;
   height: 40px;
-  position: absolute;
+  position: relative;
   bottom: 0;
-  width: 100%;
+  width: auto;
+  left: 0;
+  right: 0;
 }
 
 footer a.button {
